ch9/ch9-suggestions-exercise/iac-macro-usage/tests/fails/really_unknown_property.rs
use iac_macro::iac;

fn main() {
    iac! {
        somethingtotallyunknown name
    }
}
