ch9/ch9-suggestions-exercise/iac-macro-usage/tests/fails/really_unknown_property.stderr
error: only 'bucket' and 'lambda' resources are supported
 --> tests/fails/really_unknown_property.rs:5:9
  |
5 |         somethingtotallyunknown name
  |         ^^^^^^^^^^^^^^^^^^^^^^^
